--- a/package.json
+++ b/package.json
@@ -42,5 +42,16 @@
     "lite-server": "2.2.2",
     "typescript": "2.2.2",
     "typings": "1.3.2"
-  }
+  },
+  "main": "gulpfile.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/katebyars/TaproomTwo.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/katebyars/TaproomTwo/issues"
+  },
+  "homepage": "https://github.com/katebyars/TaproomTwo#readme",
+  "description": ""
 }
